parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-integer-0.snap
---
source: parser/src/lexer/mod.rs
description: 11 33 1j 1_000_000j
---
[
    Token {
        kind: Integer,
        value: Number(
            "11",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: Integer,
        value: Number(
            "33",
        ),
        start: 3,
        end: 5,
    },
    Token {
        kind: ImaginaryInteger,
        value: Number(
            "1j",
        ),
        start: 6,
        end: 8,
    },
    Token {
        kind: ImaginaryInteger,
        value: Number(
            "1_000_000j",
        ),
        start: 9,
        end: 19,
    },
]
