parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-octal-2.snap
---
source: parser/src/lexer/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o2",
        ),
        start: 0,
        end: 3,
    },
]
