parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-octal-4.snap
---
source: parser/src/lexer/mod.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o4",
        ),
        start: 0,
        end: 3,
    },
]
