parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-bytes-literals-1.snap
---
source: parser/src/lexer/mod.rs
description: "rb\"world\""
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb\"world\"",
        ),
        start: 0,
        end: 9,
    },
]
