parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-bytes-literals-2.snap
---
source: parser/src/lexer/mod.rs
description: "rb\"\""
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb\"\"",
        ),
        start: 0,
        end: 4,
    },
]
